Add links to Github

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
@@ -95,22 +97,23 @@
       <div class="projects-wrapper" >
         <div class=" card" id="card-1">
           <div class="card-content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, recusandae!</p>
+            <p><a href="http://github.com/AkashKhatrii/Nostalgia" target="_blank"><i class="fas fa-link"></i>Social media app where users can post memories and blogs. It also has feature to save favourite posts and blogs.</a></p>
+      
           </div>
         </div>
         <div class="card" id="card-2">
           <div class="card-content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, recusandae!</p>
-          </div>
+            <p><a href="https://github.com/AkashKhatrii/socketio-chat" target="_blank"><i class="fas fa-link"></i>Chat application built with React and socket.io.</a> </p>      </div>
         </div>
         <div class="card" id="card-3">
           <div class="card-content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, recusandae!</p>
+ <p><a href="http://github.com/AkashKhatrii/ParaClone" target="_blank"><i class="fas fa-link"></i>Chrome extension to copy and paste the content from the web, eliminating the need for visiting notepad again and again. </a></p>
           </div>
         </div>
         <div class="card" id="card-4">
           <div class="card-content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, recusandae!</p>
+            <p><a href="http://github.com/AkashKhatrii/todo-react" target="_blank"><i class="fas fa-link"></i>A simpleToDo web app built with React.</a></p>
+            
           </div>
         </div>
         <div class="card" id="card-5">
