Update About Me

--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
             <br />
             <div class="para">
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime
-                officia rem possimus amet quos earum ad officiis omnis adipisci
-                vero laborum qui numquam, repudiandae sed? Voluptas earum
-                corporis exercitationem nam!
+                 am a dedicated and innovative computer science graduate student at the University of Utah with a deep passion for problem-solving and software development. My academic journey has provided me with a strong foundation in computer science principles, and my hands-on experience includes developing websites and tackling complex problems in the realms of machine learning and deep learning. I am committed to continuous learning, staying up-to-date with industry trends, and leveraging my skills to create impactful solutions.
               </p>
             </div>
           </div>
@@ -90,14 +87,7 @@
             <h1>About Me</h1>
           </div>
           <div class="paragraph">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
-            dolorum optio quasi repudiandae veritatis eos dolorem nesciunt
-            mollitia nam voluptatum molestias illo dolores quo pariatur
-            perferendis et eveniet earum hic, velit maxime nobis neque?
-            Veritatis facilis ipsam, assumenda neque impedit consequatur dolor
-            incidunt sequi atque distinctio numquam quae unde quibusdam tempora
-            quod ut obcaecati ullam tempore minus voluptates pariatur
-            reiciendis.
+             I am a dedicated and passionate Computer Science graduate student at the University of Utah with a deep passion for problem-solving and software development. My academic journey has provided me with a strong foundation in computer science principles, and my hands-on experience includes developing websites and tackling complex problems in the realms of machine learning and deep learning. I am committed to continuous learning, staying up-to-date with industry trends, and leveraging my skills to create impactful solutions.
           </div>
         </div>
         <!-- </div> -->
