--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section id="main">
         <div class="main-wrapper">
           <div class="photo">
-            <img src="images/akash.jpg" alt="person" />
+            <img src="images/akash1.jpg" alt="person" />
           </div>
           <div class="desc">
             <h2>Akash Khatri</h2>
