--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
 
             <div class="intern">
-              <h3>Enovate Skill<span>June 2020 - July 2021</span></h3>
+              <h3>Enovate Skill, <span>June 2020 - July 2021</span></h3>
               <span class="position">Internet of Things Trainee</span>
               <br>
               <div class="info">
