--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
 
             <div class="intern">
-              <h3>Enovate Skill, <span>June 2020 - July 2021</span></h3>
+              <h3>Enovate Skill, <span>June 2020 - July 2020</span></h3>
               <span class="position">Internet of Things Trainee</span>
               <br>
               <div class="info">
@@ -158,7 +158,7 @@
 
     <div class="scroll">
       <section id="projects">
-        <h2>Projects</h2>
+        <h2>Selected Projects</h2>
         <div class="projects-wrapper">
           <div id="column1">
           <div class="card" id="card-1">
