--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
               <br>
               <div class="info">
                 <ol>
-                  <li>Programmed Arduino and Raspberry Pi devices to create functional IoT prototypes.
-                  </li>
+                  <!-- <li>Programmed Arduino and Raspberry Pi devices to create functional IoT prototypes.
+                  </li> -->
                   <li>Created and simulated IoT models using platforms like Tinkercad to test designs virtually.</li>
                   <li>Designed and built various Tinkercad simulators, including fire alarm systems and temperature sensors.</li>
                 </ol>
@@ -304,7 +304,7 @@
           <div class="certification_info">
             <ol>
               <li>Oracke Cloud Infrastructure 2023 Foundations Associate.</li>
-              <li>Oracle Cloud Infrastructure 2023 AI Foundations Associate.</li>
+              <!-- <li>Oracle Cloud Infrastructure 2023 AI Foundations Associate.</li> -->
               <li>30 days of Google Cloud Platform</li>
               <li>Hackerrank Python Basic and Intermediate</li>
               <li>C++ Gold Hackerrank</li>
