Correct spelling error

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           </div>
           <div class="certification_info">
             <ol>
-              <li>Oracke Cloud Infrastructure 2023 Foundations Associate.</li>
+              <li>Oracle Cloud Infrastructure 2023 Foundations Associate.</li>
               <!-- <li>Oracle Cloud Infrastructure 2023 AI Foundations Associate.</li> -->
               <li>30 days of Google Cloud Platform</li>
               <li>Hackerrank Python Basic and Intermediate</li>
