Change heading Internships -> Work Experience, Add TA position

--- a/index.html
+++ b/index.html
@@ -118,9 +118,22 @@
       <section id="internship">
         <div class="internship-wrapper">
           <div class="heading">
-            <h1>Internships</h1>
+            <h1>Work Experience</h1>
           </div>
           <div class="internship_info">
+
+            <div class="intern">
+              <h3> University of Utah, <span>Jan 2024 2021 - Present</span></h3>
+              <span class="position">Graduate Teaching Assistant</span>
+              <br>
+              <div class="info">
+                <ol>
+                  <li>Lead doubt sessions for 90+ students, clarifying concepts and promoting collaboration and, oversee assignment grading, providing timely and constructive feedback for improved understanding of web development principles.</li>
+                  <li>Collaborate with the course instructor and fellow TAs to design and implement effective teaching strategies, enhancing the overall learning experience for students.</li>
+                </ol>
+              </div>
+            </div>
+            
             <div class="intern">
               <h3>Exposys Data Labs, <span>June 2021 - July 2021</span></h3>
               <span class="position">Full Stack web Developer Intern</span>
