Update Work Experience -> TA

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
           <div class="internship_info">
 
             <div class="intern">
-              <h3> University of Utah, <span>Jan 2024 2021 - Present</span></h3>
-              <span class="position">Graduate Teaching Assistant</span>
+              <h3> University of Utah, <span>Jan 2024 - Present</span></h3>
+              <span class="position">Graduate Teaching Assistant for Web Software Development</span>
               <br>
               <div class="info">
                 <ol>
