--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <br>
               <div class="info">
                 <ol>
-                  <li>Lead doubt sessions for 90+ students, clarifying concepts and promoting collaboration and, oversee assignment grading,<br> providing timely and constructive feedback for improved understanding of web development principles.</li>
+                  <li>Lead doubt sessions for 90+ students, clarifying concepts and promoting collaboration and, oversee assignment <br> grading, providing timely and constructive feedback for improved understanding of web development principles.</li>
                   <li>Collaborate with the course instructor and fellow TAs to design and implement effective teaching strategies, enhancing<br> the overall learning experience for students.</li>
                 </ol>
               </div>
