Remove irrelevant info and change color scheme

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-YCtc+t12NqM2Ix6Ba3Hw7wQ47rZtrNNsckO3Hb7mqVs2DdYHmQ90D7T4Pwpg+QKe0xYdWdy9OMQT8f6JZV2EAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -54,7 +56,7 @@
           </div>
           <div class="desc">
             <h2>Akash Khatri</h2>
-            <span>Web Developer <span class="vertical_line">|</span> Programmer</span>
+            <span>Software Developer</span>
             <br />
             <div class="para">
               <p>
@@ -64,7 +66,7 @@
           </div>
         </div>
 
-        <div class="social-wrapper">
+        <!-- <div class="social-wrapper">
           <div class="social-links">
             <ul>
               <li>
@@ -80,18 +82,19 @@
               </li>
               <li>
                 <a href=""><i class="fab fa-codepen"></i></a>
-              </li>
-            </ul>
+              </li> -->
+            <!-- </ul>
           </div>
-        </div>
+        </div> -->
       </section>
     </div>
 
+    <!-- Education -->
     <div class="scroll">
       <section id="education">
         <div class="education-wrapper">
           <div class="heading">
-            <h1>Education</h1>
+          <h1><i class="fas fa-school"></i> Education</h1>
           </div>
           <div class="education_info">
             <div class="ed">
@@ -114,11 +117,12 @@
       </section>
     </div>
 
+    <!-- Work -->
     <div class="scroll">
       <section id="internship">
         <div class="internship-wrapper">
           <div class="heading">
-            <h1>Work Experience</h1>
+            <h1><i class="fas fa-briefcase"></i> Work Experience</h1>
           </div>
           <div class="internship_info">
 
@@ -171,7 +175,7 @@
 
     <div class="scroll">
       <section id="projects">
-        <h2>Selected Projects</h2>
+        <h2><i class="fas fa-laptop-code"></i> Selected Projects</h2>
         <div class="projects-wrapper">
           <div id="column1">
           <div class="card" id="card-1">
@@ -294,35 +298,39 @@
     <div class="scroll">
       <section id="certifications">
         <div class="certifications-wrapper">
-          <div class="heading">
-            <h1>Partcipations</h1>
-          </div>
-          <div class="certification_info">
-            <ol>
-              <li>Participated in 4 intercollege hackathons and was top 10 in two of them.</li>
-              <li>Cleared level 1 of International Maths Olympiad
-              <li>State Level Cricket Player(Invited team)</li>
-              <li> Runner up of Blind Code Competition (code with monitor screen off) held in College</li>
-              
-              <li>Worked with an NGO (Simran Seva Pratishthan, Nov 21 – June 22), for a period of 8 
-                months where we raised funds for education of needy children and provided food and 
-                shelter to Adivasi (tribal people)</li>
+          <div class="certifications-wrapper-item">
+            <div class="heading">
+              <h1><i class="fas fa-handshake"></i> Partcipations</h1>
+            </div>
+            <div class="certification_info">
+              <ol>
+                <li>Participated in 4 intercollege hackathons and was top 10 in two of them.</li>
+                <li>Cleared level 1 of International Maths Olympiad
+                <li>State Level Cricket Player(Invited team)</li>
+                <li> Runner up of Blind Code Competition (code with monitor screen off) held in College</li>
+                
+                <li>Worked with an NGO (Simran Seva Pratishthan, Nov 21 – June 22), for a period of 8 
+                  months where we raised funds for education of needy children and provided food and 
+                  shelter to Adivasi (tribal people)</li>
 
-            </ol>
+              </ol>
+            </div>
           </div>
 
-          <div class="heading2">
-            <h1>Certifications</h1>
-          </div>
-          <div class="certification_info">
-            <ol>
-              <li>Oracle Cloud Infrastructure 2023 Foundations Associate.</li>
-              <!-- <li>Oracle Cloud Infrastructure 2023 AI Foundations Associate.</li> -->
-              <li>30 days of Google Cloud Platform</li>
-              <li>Hackerrank Python Basic and Intermediate</li>
-              <li>C++ Gold Hackerrank</li>
+          <div class='certifications-wrapper-item'>
+            <div class="heading">
+              <h1><i class="fas fa-certificate"></i> Certifications</h1>
+            </div>
+            <div class="certification_info">
+              <ol>
+                <li>Oracle Cloud Infrastructure 2023 Foundations Associate.</li>
+                <!-- <li>Oracle Cloud Infrastructure 2023 AI Foundations Associate.</li> -->
+                <li>30 days of Google Cloud Platform</li>
+                <li>Hackerrank Python Basic and Intermediate</li>
+                <li>C++ Gold Hackerrank</li>
 
-            </ol>
+              </ol>
+            </div>
           </div>
         </div>
         <!-- </div> -->
