Change about section

--- a/index.html
+++ b/index.html
@@ -50,9 +50,17 @@
       <!-- <div class="portfolio"> -->
 
       <section id="main">
-        <div class="main-wrapper">
+
+        <div class="about-wrapper">
+          <p id='name'>Hello, my name is</p>
+          <h1>Akash Khatri</h1>
+          <h2>Software Developer Extraordinaire</h2>
+          <p>I'm a Computer Science graduate student at the University of Utah, dedicated to solving complex problems through innovative software development. With a strong foundation in computer science and hands-on experience in dynamic website and tool development, I explore machine learning and deep learning. Proficient in Python, JavaScript, React.js, Node.js, and more, I stay updated on industry trends to create impactful solutions, driven by a passion for bringing ideas to life.</p>
+          <button>Connect with me</button>
+      </div>
+        <!-- <div class="main-wrapper">
           <div class="photo">
-            <img src="images/akash1.jpg" alt="person" />
+             <img src="images/akash1.jpg" alt="person" /> 
           </div>
           <div class="desc">
             <h2>Akash Khatri</h2>
@@ -64,7 +72,7 @@
               </p>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- <div class="social-wrapper">
           <div class="social-links">
