--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body>
     <div class="nav-bg scroll">
       <div class="nav-wrapper">
-        <div class="logo">Portfolio</div>
+        <div class="logo"></div>
 
         <ul>
           <li><a href="">About Me</a></li>
@@ -107,14 +107,14 @@
           <div class="education_info">
             <div class="ed">
               <h3>University of Utah, <span>Aug 2023 - May 2025</span></h3>
-              <span class="degree">Master's in Computer Science</span>
+              <span class="degree">Master's in Computer Science, CGPA: 4.0/4.0</span>
               <br>
               <span class="coursework"><span>Coursework:</span> Advanced Algorithms, Computer Architecture, NLP with Deep Learning</span>
             </div>
 
             <div class="ed">
-              <h3>Thadomal Shahani Engineering College, <span>Aug 2019 - May 2023</span></h3>
-              <span class="degree">BE in Computer Engineering</span>
+              <h3>University of Mumbai, <span>Aug 2019 - May 2023</span></h3>
+              <span class="degree">BE in Computer Engineering, CGPA: 9.64/10</span>
               <br>
               <span class="coursework"><span>Coursework:</span> Data Structures, Artificial Intelligence, Machine Learning, Advanced DBMS,<br> Operating Systems,
                 Cloud Computing, Object Oriented Programming, Big Data Analytics</span>
@@ -133,9 +133,21 @@
             <h1><i class="fas fa-briefcase"></i> Work Experience</h1>
           </div>
           <div class="internship_info">
+            
+            <div class="intern">
+              <h3> University of Utah, <span>May 2024 - Present</span></h3>
+              <span class="position">Research Assistant</span>
+              <br>
+              <div class="info">
+                <ol>
+                  <li>Conducted advanced research on semantic sorting using LLMs under the guidance of Prof. El Kindi, focusing on <br>optimizing data management.</li>
+                  <li>Developed sophisticated models that generate sorting suggestions based on semantic relationships, enhancing data <br>organization and retrieval efficiency by leveraging contextual and hierarchical data understanding.</li>
+                </ol>
+              </div>
+            </div>
 
             <div class="intern">
-              <h3> University of Utah, <span>Jan 2024 - Present</span></h3>
+              <h3> University of Utah, <span>Jan 2024 - May 2024</span></h3>
               <span class="position">Graduate Teaching Assistant for Web Software Development</span>
               <br>
               <div class="info">
