--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Akash Khatri</title>
   </head>
 
   <body>
