Add linkedin link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h1>Akash Khatri</h1>
           <h2>Software Developer Extraordinaire</h2>
           <p>I'm a Computer Science graduate student at the University of Utah, dedicated to solving complex problems through innovative software development. With a strong foundation in computer science and hands-on experience in dynamic website and tool development, I explore machine learning and deep learning. Proficient in Python, JavaScript, React.js, Node.js, and more, I stay updated on industry trends to create impactful solutions, driven by a passion for bringing ideas to life.</p>
-          <button>Connect with me</button>
+          <button onclick="window.open('https://www.linkedin.com/in/akashkhatri', '_blank')">Connect with me</button>
       </div>
         <!-- <div class="main-wrapper">
           <div class="photo">
