--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 
     <link rel="stylesheet" href="style.css" />
     <title>Akash Khatri</title>
@@ -122,6 +127,58 @@
           </div>
         </div>
         <!-- </div> -->
+      </section>
+    </div>
+
+    <div class='scroll'>
+      <section id='languages'>
+        <div class='languages-wrapper'>
+          <div class="heading">
+            <h1><i class="fas fa-laptop-code"></i> Languages & Tools</h1>
+          </div>
+          <div class='languages-logos'>
+            <!-- <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" />
+            </div> -->
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
+            </div>
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" />
+            </div>
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
+            </div>
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg" />
+            </div>
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" />
+            </div>
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original-wordmark.svg" />
+            </div>
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" />
+            </div>
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-original-wordmark.svg" />
+            </div>
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" />
+            </div>
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+            </div>
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg" />
+            </div>
+            <div class='grid-item'>
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jira/jira-original-wordmark.svg" />
+            </div>
+
+          </div> 
+        </div>
       </section>
     </div>
 
@@ -363,6 +420,10 @@
         <!-- </div> -->
       </section>
     </div>
+
+
+    
+    
 
     <!-- <div class="scroll">
       <section id="contact">
