--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul>
           <li><a href="">About Me</a></li>
           <li><a href="#education">Education</a></li>
-          <li><a href="#internship">Internships</a></li>
+          <li><a href="#internship">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
           <!-- <li><a href="#contact">Contact Me</a></li> -->
         </ul>
@@ -107,7 +107,7 @@
       <section id="education">
         <div class="education-wrapper">
           <div class="heading">
-          <h1><i class="fas fa-school"></i> Education</h1>
+          <h1><i class="fas fa-school"></i> <span>EDUCATION</span></h1>
           </div>
           <div class="education_info">
             <div class="ed">
@@ -134,7 +134,7 @@
       <section id='languages'>
         <div class='languages-wrapper'>
           <div class="heading">
-            <h1><i class="fas fa-laptop-code"></i> Languages & Tools</h1>
+            <h1><i class="fas fa-laptop-code"></i> <span>LANGUAGES & TOOLS </span></h1>
           </div>
           <div class='languages-logos'>
             <!-- <div class='grid-item'>
@@ -187,7 +187,7 @@
       <section id="internship">
         <div class="internship-wrapper">
           <div class="heading">
-            <h1><i class="fas fa-briefcase"></i> Work Experience</h1>
+            <h1><i class="fas fa-briefcase"></i> <span>WORK EXPERIENCE</span></h1>
           </div>
           <div class="internship_info">
             
@@ -209,8 +209,8 @@
               <br>
               <div class="info">
                 <ol>
-                  <li>Lead doubt sessions for 90+ students, clarifying concepts and promoting collaboration and, oversee assignment <br> grading, providing timely and constructive feedback for improved understanding of web development principles.</li>
-                  <li>Collaborate with the course instructor and fellow TAs to design and implement effective teaching strategies, enhancing<br> the overall learning experience for students.</li>
+                  <li>Facilitated in teaching full stack development to 80+ students, focusing on React.js, FastAPI, SQLite and AWS for deployment; held office hours to resolve student queries and grade assignments.</li>
+                  <li>Collaborated in weekly meetings to discuss course progress and plan future assignments, ensuring effective course delivery.</li>
                 </ol>
               </div>
             </div>
@@ -221,11 +221,9 @@
               <br>
               <div class="info">
                 <ol>
-                  <li>Worked in a team of 4 to develop “Nostalgia”, a full-stack website for sharing memories through photos and
-                    narratives.</li>
-                  <li>Implemented interactive features for users to comment on posts and save them for future reference.</li>
-                  <li>Designed and integrated a versatile blogging system, enabling users to contribute and view articles on various
-                    topics.</li>
+                  <li>Led development of Nostalgia, a website for sharing memories through photos and narratives, using HTML, CSS, JavaScript, Node.js, and MongoDB.</li>
+                  <li>Enhanced user engagement by adding interactive commenting and saving features, fostering a connected user community.</li>
+                  <li>Built a user-friendly blogging platform with seamless REST API integration, significantly increasing user engagement and content creation.</li>
                 </ol>
               </div>
             </div>
@@ -255,7 +253,7 @@
         <!-- <div class='projects-outer-wrapper'> -->
         <div class='projects-outer-wrapper'>
           <div class="heading">
-            <h1><i class="fas fa-laptop-code"></i> Selected Projects</h1>
+            <h1><i class="fas fa-laptop-code"></i> <span>PROJECTS</span></h1>
           </div>
           
           <div class="projects-wrapper">
@@ -272,10 +270,8 @@
 
                   <div class="info">
                     <ul>
-                      <li>Crafted a prototype webapp focused on facilitating local business growth, specifically tailored for local service
-                        providers (plumbers, painters, carpenters, electricians) to connect with nearby users.</li>
-                      <li>Implemented a wide range of features, including service categories selection, user account creation, appointment
-                        scheduling, and an interface offering comprehensive management of appointments and services.</li>
+                      <li>Crafted a prototype web app to connect local service providers with users, increasing local business visibility.</li>
+                      <li>Improved user experience by implementing features for service selection, account creation, and appointment scheduling.</li>
                     </ul>
 
                   </div>
@@ -301,6 +297,25 @@
                 </div>
               </div>
 
+              <div class="card" id="card-3">
+                <div class="card-content">
+                  <p>
+                    <a
+                      href="http://github.com/AkashKhatrii/ParaClone"
+                      target="_blank"
+                      ><i class="fas fa-link"></i>CNNs for Text Classification
+                    </a>
+                  </p>
+
+                  <div class="info">
+                    <ul>
+                      <li>Tailored Convolutional Neural Networks for sentence classification in NLP, resulting in an 8% increase in f1 scores by fine-tuning models.</li>
+                      <li>Improved f1 scores on the SST dataset by utilizing GloVe and fastText embeddings, achieving scores of 84 and 84.4, respectively, compared to 82.5 and 80 with static embeddings.</li>
+                      <li>Explored the efficacy of CNNs in textual data processing, contributing valuable insights to NLP research.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             <!-- <div class="card" id="card-2">
               <div class="card-content">
                 <p>
@@ -384,7 +399,7 @@
         <div class="certifications-wrapper">
           <div class="certifications-wrapper-item">
             <div class="heading">
-              <h1><i class="fas fa-handshake"></i> Partcipations</h1>
+              <h1><i class="fas fa-handshake"></i> <span>PARTICIPATIONS</span></h1>
             </div>
             <div class="certification_info">
               <ol>
@@ -403,7 +418,7 @@
 
           <div class='certifications-wrapper-item'>
             <div class="heading">
-              <h1><i class="fas fa-certificate"></i> Certifications</h1>
+              <h1><i class="fas fa-certificate"></i> <span>CERTIFICATIONS</span></h1>
             </div>
             <div class="certification_info">
               <ol>
