--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
           <p id='name'>Hello, my name is</p>
           <h1>Akash Khatri</h1>
           <h2>Software Developer Extraordinaire</h2>
-          <p>I'm a Computer Science graduate student at the University of Utah, dedicated to solving complex problems through innovative software development. With a strong foundation in computer science and hands-on experience in dynamic website and tool development, I explore machine learning and deep learning. Proficient in Python, JavaScript, React.js, Node.js, and more, I stay updated on industry trends to create impactful solutions, driven by a passion for bringing ideas to life.</p>
+          <p>
+            Currently pursuing my Master's in Computer Science at the University of Utah, I have had hands-on experience building web applications and websites, with a strong expertise in developing user interfaces using React.js. I am also advancing my skills in full stack development with the MERN stack while also exploring the realms of AI and NLP through research on large language models.  My journey is all about blending creativity with tech to solve real-world problems and keep pushing the boundaries of what's possible.
+
+
+          </p>
           <button onclick="window.open('https://www.linkedin.com/in/akashkhatri', '_blank')">Connect with me</button>
       </div>
         <!-- <div class="main-wrapper">
