Add social links

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <section id="main">
 
         <div class="about-wrapper">
+          <div class='about-intro'>
           <p id='name'>Hello, my name is</p>
           <h1>Akash Khatri</h1>
           <h2>Software Developer Extraordinaire</h2>
@@ -66,6 +67,26 @@
 
           </p>
           <button onclick="window.open('https://www.linkedin.com/in/akashkhatri', '_blank')">Connect with me</button>
+        </div>
+
+        <div class="about-contact-links">
+          <div class="contact-item">
+            <i class="fas fa-envelope"></i>
+            <a href="mailto:akash.m.khatri@gmail.com">akash.m.khatri@gmail.com</a>
+          </div>
+          <div class="contact-item">
+            <i class="fas fa-phone"></i>
+            <span>+1 (801)-403-3512</span>
+          </div>
+          <div class="contact-item">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/akashkhatri/">linkedin.com/in/akashkhatri/</a>
+          </div>
+          <div class="contact-item">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/akashkhatrii">AkashKhatrii</a>
+          </div>
+        </div>
       </div>
         <!-- <div class="main-wrapper">
           <div class="photo">
