--- a/index.html
+++ b/index.html
@@ -476,6 +476,8 @@
             
           </div>
 
+          <div class='form-map'>
+
           <div class='contact-form'>
 
             <form>
@@ -505,6 +507,15 @@
               </div>
             </form>
           </div>
+
+          <div class='contact-map'>
+            <figure>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.8510184179845!2d-111.87485672433581!3d40.76530137138555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f56e384f4a97%3A0x7b065ede3b27cd2c!2s645%20E%20200%20S%2C%20Salt%20Lake%20City%2C%20UT%2084102%2C%20USA!5e0!3m2!1sen!2sin!4v1720312712432!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </figure>
+
+          </div>
+
+          <div>
 
         </div>
 
