Update Projects - UrbanAid

--- a/index.html
+++ b/index.html
@@ -289,8 +289,10 @@
                     <a
                       href="https://github.com/AkashKhatrii/mpr-sem4"
                       target="_blank"
-                      ><i class="fas fa-link"></i>DoorToDoor</a
+                      ><i class="fas fa-link"></i>UrbanAid</a
                     >
+
+                    <span id="teeter_demo"><a href="https://urbanaid.up.railway.app/">Demo</a></span>
                   </p>
 
                   <div class="info">
